--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: 1fr 4fr 1fr;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     height: 60px;
     font-family: sans-serif;
     font-size: 4vh;
@@ -25,10 +25,17 @@
     justify-content: space-around;
     height: inherit;
 }
-.iconsDiv>img {
-    padding: 1%;
+.singleIconCell {
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    align-items: center;
+}
+.singleIconCell>img {
     border-radius: 10px;
-
+    width: 45px;
+    height: 45px;
+    padding: 10%;
 }
 
 .foundCharacter {
